--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
 body {
     background-color: lightyellow;
     font-family: 'Times New Roman', Times, serif;
-    color: black;
+    color: darkblue;
   }
   
+  .container {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    width: 300px;
+  }
   h1 {
     margin: 4px;
     padding: 4px;
