--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,5 @@
-body {
-    background-color: lightyellow;
-    font-family: 'Times New Roman', Times, serif;
-    color: darkblue;
-  }
-  
-  .container {
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    width: 300px;
-  }
-  h1 {
-    margin: 4px;
-    padding: 4px;
-  }
-  
-  ul {
-    list-style: none;
-    margin: 4;
-    padding: 4;
-  }
-  
-  li {
-    padding: 10px;
-    margin: 5px;
-    border-radius: 5px;
-  }
-  
-  /* Theme-specific styles */
+
+    /* Theme-specific styles */
   .default-theme {
     background: lightyellow;
     color: black;
@@ -35,7 +7,7 @@ body {
 
   .dark-theme {
     background-color: #333;
-    color: #f5f5f5;
+    color: gainsboro;
   }
   
   .light-theme {
@@ -44,8 +16,8 @@ body {
   }
   
   .green-theme {
-    background-color: green;
-    color: greenyellow;
+    background-color: lightgreen;
+    color: green;
   }
 
   .pink-theme {
