--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@ background-color: lightyellow;
 font-family: 'Times New Roman', Times, serif;
 color: darkblue;
 }
+.container {
+  border-radius: 5px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  width: 300px;
+}
 
 h1 {
 margin: 4px;
