--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@ color: darkblue;
 }
 .container {
   border-radius: 5px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 1);
   width: 300px;
 }
 
-h1 {
+h1, h2{
 margin: 4px;
 padding: 4px;
 }
@@ -64,4 +64,9 @@ border-radius: 5px;
 
   .roman-list li {
     list-style-type: upper-roman;
+  }
+
+  form {
+    padding: 4px;
+    margin: 4px;
   }
